--- a/frontend/src/style/homePage/fixed-section.css
+++ b/frontend/src/style/homePage/fixed-section.css
@@ -6,7 +6,7 @@
 
 .couple-container {
   width: 100%;
-  height: 900px;
+  height: fit-content;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -43,10 +43,11 @@
 .overlay-text h2 {
   font-size: 40px;
   font-weight: 700;
+  color: #fff;
 }
 
 .overlay-text p {
   color: #fff;
-  width: 500px;
+  width: 700px;
   font-size: 18px;
 }
