--- a/frontend/src/style/homePage/whoWeAre.css
+++ b/frontend/src/style/homePage/whoWeAre.css
@@ -10,6 +10,7 @@
   display: flex;
   color: #fff;
   position: relative;
+  margin-bottom: 7%;
 }
 
 .whoWeAre-container p {
@@ -17,7 +18,7 @@
 }
 
 .whoWeAre-container .box1 {
-  border: 6px solid #313131;
+  border: 6px solid var(--light-gray-color);
   display: flex;
   width: 450px;
   height: 150px;
@@ -31,7 +32,7 @@
   font-weight: 700;
 }
 .whoWeAre-container .box2 {
-  border: 6px solid #313131;
+  border: 6px solid var(--light-gray-color);
 
   display: flex;
   width: 450px;
@@ -42,7 +43,7 @@
   gap: 30px;
 }
 .whoWeAre-container .box3 {
-  border: 6px solid #313131;
+  border: 6px solid var(--light-gray-color);
   display: flex;
   width: 450px;
   height: 150px;
