--- a/frontend/src/style/register.css
+++ b/frontend/src/style/register.css
@@ -47,13 +47,13 @@
 }
 
 .image-upload-placeholder {
+  margin: 0 auto; /* למרכז */
   border: 2px dashed rgba(255, 255, 255, 0.4);
   padding: 20px;
-  text-align: center;
-  color: rgba(255, 255, 255, 0.6);
-  cursor: pointer;
   border-radius: 8px;
-  transition: border-color 0.3s ease;
+  text-align: center;
+  cursor: pointer;
+  overflow: hidden;
 }
 
 .image-upload-placeholder:hover {
@@ -113,12 +113,14 @@ input[type="number"] {
 
 form .submit-btn {
   border: 0;
-  height: 40px;
+  height: 60px;
   width: 100%;
   border-radius: 6px;
   font-weight: 500;
-  font-size: 18px;
-  background-color: rgb(194, 167, 18);
+  font-size: 20px;
+  box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.4);
+  background-color: #000;
+  color: var(--primary-color);
 }
 
 .register-wrapper .input-wrapper {
@@ -126,7 +128,66 @@ form .submit-btn {
 }
 
 form .submit-btn:hover {
-  background-color: rgb(209, 187, 88);
+  background-color: rgb(75, 75, 75);
+  color: var(--primary-color);
+}
+
+.image-preview-wrapper {
+  position: relative;
+  max-width: 100%;
+  border-radius: 8px;
+  padding: 10px 0;
+  border: 2px dashed var(--primary-color);
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.image-preview-wrapper img.image-preview {
+  max-width: 40%;
+  border-radius: 8px;
+  height: auto;
+  display: inline-block;
+}
+
+.image-remove-btn {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  background: rgba(255, 0, 0, 0.6);
+  border: none;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  color: white;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 20px;
+  text-align: center;
+  padding: 0;
+  user-select: none;
+}
+
+.image-remove-btn:hover {
+  background: rgba(255, 0, 0, 0.8);
+}
+
+p .lgn-btn {
+  color: var(--primary-color);
+}
+
+.register-box .serverError {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: fit-content;
+  padding: 12px 0;
+  border-radius: 5px;
+  margin: 20px 0;
+  background-color: #ad0000;
+  font-size: 16px;
+  font-weight: 600;
+  color: #fff;
 }
 
 @media (max-width: 991.98px) {
