--- a/frontend/src/style/register.css
+++ b/frontend/src/style/register.css
@@ -47,7 +47,7 @@
 }
 
 .image-upload-placeholder {
-  margin: 0 auto; /* למרכז */
+  margin: 0 auto;
   border: 2px dashed rgba(255, 255, 255, 0.4);
   padding: 20px;
   border-radius: 8px;
