--- a/frontend/src/style/trainerDash/myPrograms.css
+++ b/frontend/src/style/trainerDash/myPrograms.css
@@ -1,7 +1,7 @@
 .myPrograms-container {
   min-height: 100vh;
   width: 100%;
-  padding: 120px 15px 0 15px;
+  padding: 120px 15px 50px 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
