--- a/frontend/src/style/homePage/banner.css
+++ b/frontend/src/style/homePage/banner.css
@@ -66,11 +66,20 @@
   border-radius: 30px 30px;
   background-color: transparent;
   padding: 10px 30px;
+  text-decoration: none;
 }
 
 .text-container .join-btn:hover {
   color: #000;
   background-color: var(--primary-color);
+}
+
+.text-container a {
+  text-decoration: none !important;
+}
+.text-container a:focus, .text-container a:active {
+  outline: none;
+  box-shadow: none;
 }
 
 @media (max-width: 991.98px) {
@@ -80,8 +89,11 @@
     text-align: center;
     flex-direction: column;
     width: 100%;
+    height: 500px;
   }
-
+  .slider-image-container {
+    height: 500px;
+  }
   .text-container {
     position: absolute;
     top: 60%;
@@ -91,18 +103,33 @@
     padding: 1rem;
     width: 100%;
   }
-
   .text-container h1 {
     text-align: center;
     justify-self: center;
     align-items: center;
     width: 100%;
-    font-size: 50px;
+    max-width: 700px;
+    margin: 0 auto;
+    box-sizing: border-box;
+    font-size: 2.2rem;
   }
   .text-container p {
     width: 100%;
-    text-align: justify;
-    height: fit-content;
+    max-width: 500px;
+    margin: 0 auto;
+    box-sizing: border-box;
+    text-align: center;
+    font-size: 1.1rem;
+    margin: 0 auto;
+  }
+  .text-container .join-btn {
+    font-size: 1.1rem;
+    padding: 10px 24px;
+    width: 80%;
+    max-width: 220px;
+    margin: 24px auto 0 auto;
+    display: block;
+    text-decoration: none;
   }
 }
 
@@ -143,7 +170,7 @@
     padding: 8px 18px;
     width: 90%;
     max-width: 220px;
-    margin: 0 auto;
+    margin: 20px auto 0 auto;
     display: block;
   }
 }
